fix: font metrics for better vertical alignment and change Slanted to Oblique (#30)
* fix(glyphs): ascender and descender metrics

* fix(glyphs): glyphs3 internal ascender value

* chore(fonts): export font files

* fix(glyphs): winDescent metric to be positive

Per the spec, it should be positive instead of a negative number like
the others.

* fix(glyphs): metrics for Oblique style

* fix(glyphs): glyphs3 internal metrics cause bugs, resetting back to prior value

* fix: update minor version to 200

The 100 is for the prior glyphs that were added.
The 200 is for this change of font metrics and spacing.

* chore(fonts): export font files with new style name Oblique

* fix: all references to "Slanted" to now use "Oblique"

--- a/global.scss
+++ b/global.scss
@@ -9,9 +9,9 @@
 
 @font-face {
   font-family: 'ServerMono';
-  src: url('/fonts/ServerMono-RegularSlanted.woff2') format('woff2'),
-       url('/fonts/ServerMono-RegularSlanted.woff') format('woff'),
-       url('/fonts/ServerMono-RegularSlanted.otf') format('opentype');
+  src: url('/fonts/ServerMono-RegularOblique.woff2') format('woff2'),
+       url('/fonts/ServerMono-RegularOblique.woff') format('woff'),
+       url('/fonts/ServerMono-RegularOblique.otf') format('opentype');
   font-weight: normal;
   font-style: oblique;
 }
